--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,12 +92,12 @@
         </div>
       </div>
 
-      <!-- Add Blog Modal -->
+      <!-- Add Blog  -->
       <div class="modal fade" id="addBlogModal" tabindex="-1" aria-labelledby="addBlogModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="addBlogModalLabel">Add New Blog</h5>
+              <h5 class="modal-title" id="addBlogModalLabel">Add  Blog</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
