--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
             <li class="nav-item"><a href="/blog_Add" class="nav-link text-white">view blog</a></li>
             <li class="nav-item"><a href="/myBlog" class="nav-link text-white">My Blog</a></li>
             <li class="nav-item"><a href="/userProfile" class="nav-link text-white">Personal Information</a></li>
+            <li class="nav-item"><a href="/topic" class="nav-link text-white">Topic</a></li>
             <li class="nav-item"><a href="/logOut" class="nav-link text-white">Logout</a></li>
             <li class="nav-item"><a href="/changePassword" class="nav-link text-white">Change Password</a></li>
           </ul>
@@ -88,7 +89,7 @@
           </div>
         </div>
       </div>
-
+      
       <!-- Add Blog  -->
       <div class="modal fade" id="addBlogModal" tabindex="-1" aria-labelledby="addBlogModalLabel" aria-hidden="true">
         <div class="modal-dialog">
