--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login Form in HTML and CSS | CodingNepal</title>
+  <title>Login Form </title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* Google Fonts Link */
