--- a/views/blog_editPage.ejs
+++ b/views/blog_editPage.ejs
@@ -12,42 +12,44 @@
 
 <body>
     <div class="container">
-        <h1 class="text-center pt-5 mt-5">Create a Blog Post</h1>
+        <h1 class="text-center pt-5 mt-5">Edit Blog Post</h1>
 
         <!-- Blog Form -->
         <div style="width: 500px;" class="mx-auto register-container">
-            <form action="/my_BlogUpdate/<%= singleRecEdit_id%>" method="post" class="mb-5" enctype="multipart/form-data">
+            <form action="/my_BlogUpdate/<%= myBlogSingleRecEdit._id %>" method="post" class="mb-5" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="imgPath" class="form-label">Image URL :</label>
-                    <input type="file" class="form-control" id="imgPath" name="imgPath" value="<%= singleRecEdit.imgPath %>" placeholder="Enter image URL"
+                    <input type="file" class="form-control" id="imgPath" name="imgPath" value="<%= myBlogSingleRecEdit.imgPath %>" placeholder="Enter image URL"
                         required>
                 </div>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username :</label>
-                    <input type="text" class="form-control" id="username" name="userName" value="<%= singleRecEdit.userName %>"
+                    <input type="text" class="form-control" id="username" name="userName" value="<%= myBlogSingleRecEdit.userName %>"
                         placeholder="Enter your username" required>
                 </div>
 
                 <div class="mb-3">
                     <label for="date" class="form-label">Date :</label>
-                    <input type="date" class="form-control" id="date" name="date" value="<%= singleRecEdit.date %>" required>
+                    <input type="date" class="form-control" id="date" name="date" value="<%= myBlogSingleRecEdit.date %>" required>
                 </div>
 
                 <div class="mb-3">
                     <label for="title" class="form-label">Title :</label>
-                    <input type="text" class="form-control" id="title" name="title" value="<%= singleRecEdit.title %>" placeholder="Enter blog title"
+                    <input type="text" class="form-control" id="title" name="title" value="<%= myBlogSingleRecEdit.title %>" placeholder="Enter blog title"
                         required>
                 </div>
                
                 <div class="mb-3">
                     <label for="description" class="form-label">Description :</label>
-                    <textarea class="form-control" id="description" name="description" value="<%= singleRecEdit.description %>" rows="10"
+                    <textarea class="form-control" id="description" name="description" value="<%= myBlogSingleRecEdit.description %>" rows="5"
                         placeholder="Enter blog description" required></textarea>
                 </div>
-
-                <button type="submit" class="btn btn-primary">
-                    <a href="" style="text-decoration: none; color: #fff;">Edit Blog</a>
-                </button>
+                <div class="d-flex justify-content-around">
+                    <button type="submit" class="btn btn-primary">
+                        Edit Blog
+                    </button>
+                    <a href="/" class="mx-4 btn btn-primary">Home Page</a>
+                </div>
             </form>
         </div>
     </div>
