--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,10 +29,10 @@
           <ul class="nav flex-column">
             <li class="nav-item"><a href="#" class="nav-link text-white">Dashboard</a></li>
             <li class="nav-item"><a href="#" class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#addBlogModal">Add Blog</a></li>
-            <li class="nav-item"><a href="/blog_Add" class="nav-link text-white">view blog</a></li>
+            <li class="nav-item"><a href="/blog_view" class="nav-link text-white">view blog</a></li>
             <li class="nav-item"><a href="/myBlog" class="nav-link text-white">My Blog</a></li>
             <li class="nav-item"><a href="/userProfile" class="nav-link text-white">Personal Information</a></li>
-            <li class="nav-item"><a href="/topic" class="nav-link text-white">Topic</a></li>
+            <li class="nav-item"><a href="/add_TopicForm" class="nav-link text-white">Topic</a></li>
             <li class="nav-item"><a href="/logOut" class="nav-link text-white">Logout</a></li>
             <li class="nav-item"><a href="/changePassword" class="nav-link text-white">Change Password</a></li>
           </ul>
