--- a/views/myBlog.ejs
+++ b/views/myBlog.ejs
@@ -1,51 +1,213 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Blog page</title>z
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="text-center">My Blog Page</h1>
+    <title>My Blog Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+        /* Custom styles for the profile image */
+        .profile-img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
 
-                <!-- Blog Post -->
+        .navbar .dropdown-menu {
+            right: 0;
+            left: auto;
+        }
+    </style>
+</head>
 
-                <!-- Display Blog Posts -->
-                <div class="flex">
-                  <% myBlogData.forEach((blogs)=>{ %>
-                      <div class="group w-4/12 border border-gray-300 rounded-2xl mb-4 mx-4">
-                          <div class="flex items-center">
-                              <img src="<%=blogs.path%>" alt="blogs img" class="rounded-t-2xl object-cover"
-                                  width="500" height="300px">
-                          </div>
-                          <div class="p-4 lg:p-6 transition-all duration-300 rounded-b-2xl group-hover:bg-gray-50">
-                              <span class="text-indigo-600 font-medium mb-3 block">
-                                  <%=blogs.date%>
-                              </span>
-                              <h4 class="text-xl text-gray-900 font-medium leading-8 mb-1">
-                                  <%=blogs.title%>
-                              </h4>
-                              <p class="text-gray-500 leading-6 mb-1">
-                                  <%=blogs.description%>
-                              </p>
-                              <a href="/my_blogEdit/<%=blogs._id%>"
-                                  class="cursor-pointer text-lg text-indigo-600 font-semibold">Edit</a>
-                              ||
-                              <a href="/my_BlogDelete/<%=blogs._id%>"
-                                  class="cursor-pointer text-lg text-red-600 font-semibold">Delete</a>
-                          </div>
-                      </div>
+<body>
 
-                      <% }) %>
-              </div>
+    <!-- Add Blog Modal -->
+    <div class="modal fade" id="addBlogModal" tabindex="-1" aria-labelledby="addBlogModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addBlogModalLabel">Add New Blog</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="/blogShow" method="post" class="mb-5" enctype="multipart/form-data">
+                        <div class="mb-3">
+                            <label for="imgPath" class="form-label">Image URL :</label>
+                            <input type="file" class="form-control" id="imgPath" name="imgPath"
+                                placeholder="Enter image URL" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username :</label>
+                            <input type="text" class="form-control" id="username" name="userName"
+                                placeholder="Enter your username" required>
+                        </div>
 
+                        <div class="mb-3">
+                            <label for="date" class="form-label">Date :</label>
+                            <input type="date" class="form-control" id="date" name="date" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="title" class="form-label">Title :</label>
+                            <input type="text" class="form-control" id="title" name="title"
+                                placeholder="Enter blog title" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Description :</label>
+                            <textarea class="form-control" id="description" name="description" rows="4"
+                                placeholder="Enter blog description" required></textarea>
+                        </div>
+
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="btn btn-primary mx-2">Submit</button>
+                            <button type="button" class="btn btn-danger mx-2" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+
+    <div class="dashboard-container">
+        <!-- Sidebar -->
+        <div class="sidebar bg-dark text-white p-3">
+            <h2 class="text-light text-center fw-bold fs-1 pt-4">DP</h2>
+            <ul class="nav flex-column">
+                <li class="nav-item"><a href="/" class="nav-link text-white">Dashboard</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-white" data-bs-toggle="modal"
+                        data-bs-target="#addBlogModal">Add Blog</a></li>
+                <li class="nav-item"><a href="/blog_view" class="nav-link text-white">Blog View</a></li>
+                <li class="nav-item"><a href="/myBlog" class="nav-link text-white">My Blog</a></li>
+                <li class="nav-item"><a href="/userProfile" class="nav-link text-white">Personal Information</a></li>
+                <li class="nav-item"><a href="/logOut" class="nav-link text-white">Logout</a></li>
+            </ul>
+        </div>
+
+        <!-- Main Content -->
+        <div class="main-content p-4">
+            <!-- Top Navbar with Profile Info -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+                <div class="container">
+                    <a class="navbar-brand" href="#" style="color: white;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                            class="bi bi-list" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                        </svg>
+                    </a>
+                    <div class="collapse navbar-collapse d-flex justify-content-center" style="margin-left: 750px;"
+                        id="navbarNav">
+                        <ul class="navbar-nav">
+                            <!-- Profile Dropdown with Image and Username -->
+                            <li class="nav-item dropdown " style="width: 60px; height: 60px;">
+                                <a class="nav-link dropdown-toggle text-light" href="#" id="navbarProfileDropdown"
+                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img src="<%= userPath %>" alt="<%=userName%>" class="rounded-circle img-fluid"
+                                        width="500px" height="500px">
+                                    <span style="color: white;">
+                                        <%= userName %>
+                                    </span>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" style="right: 0;">
+                                    <li><a class="dropdown-item" href="/userProfile">View Profile</a></li>
+                                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="/logOut">Logout</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </nav>
+
+            <div class="container mt-5">
+                <h1 class="text-center mb-4">Blog Post By <%= userName %>...!!</h1>
+                <!-- Display Blog Posts -->
+                <div class="row g-4">
+                    <% if (myBlogData.length> 0) { %>
+                        <% myBlogData.forEach((blogs)=> { %>
+                            <div class="mx-auto" style="width: 1000px;">
+                                <div class="blog-post">
+                                    <!-- Blog Image -->
+                                    <img src="<%= blogs.imgPath %>" alt="Blog Image" class="blog-img img-fluid">
+
+                                    <!-- Blog Content -->
+                                    <div class="blog-content">
+                                        <div class="d-flex justify-content-between pb-5">
+                                            <h4 class="blog-title fs-1">
+                                                <%= blogs.title %>
+                                            </h4>
+                                            <!-- Action Buttons (Edit/Delete) -->
+                                            <div
+                                                class="btn-group d-flex justify-content-center justify-content-center align-items-center">
+                                                <a href="/my_BlogEdit/<%= blogs._id %>"
+                                                    class="btn btn-primary mx-2 p-3">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                        fill="currentColor" class="bi bi-pencil-square"
+                                                        viewBox="0 0 16 16">
+                                                        <path
+                                                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                                        <path fill-rule="evenodd"
+                                                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                                                    </svg>
+                                                </a>
+                                                <a href="/my_BlogDelete/<%= blogs._id %>"
+                                                    class="btn btn-danger mx-2 p-3">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                        fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                                                        <path
+                                                            d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
+                                                    </svg>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <p class="blog-description fs-4">
+                                            <%= blogs.description %>
+                                        </p>
+                                        <span class="blog-date pb-3 d-block">Post Date : <%= new
+                                                Date(blogs.date).toLocaleDateString('en-GB') %></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <% }) %>
+                                <% } else { %>
+                                    <p class="text-center">No blog posts available. Start by adding one!</p>
+                                    <% } %>
+                </div>
+            </div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
+            <script>
+                // JavaScript to handle the hide/show of navbar on scroll
+                let lastScrollTop = 0;
+                const navbar = document.querySelector('.navbar');
+
+                window.addEventListener('scroll', function () {
+                    const currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+
+                    if (currentScroll > lastScrollTop) {
+                        // Scrolling down
+                        navbar.classList.add('navbar-hidden');
+                    } else {
+                        // Scrolling up
+                        navbar.classList.remove('navbar-hidden');
+                    }
+                    lastScrollTop = currentScroll;
+                });
+            </script>
+</body>
+
 </html>
